fix overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3217,6 +3217,9 @@ fieldset[disabled] .btn-vk.active {
 .page-profile .b-profile__block {
   margin: 0 0 10px;
 }
+body > [ui-view] {
+  overflow: hidden;
+}
 .sticky-enabled .content {
   padding-top: 90px;
 }
